--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,14 +22,14 @@
     <!-- Strings for programming language preference -->
     <string name="pref_language_key" translatable="false">pref_language</string>
     <string name="pref_language_title">Language</string>
-    <string name="pref_language_default">english</string>
-    <string name="pref_language_entry_any">english</string>
+    <string name="pref_language_default">English</string>
+    <string name="pref_language_entry_any">English</string>
     <string name="pref_language_entry_c">Wookie</string>
     <string name="pref_language_value_c" translatable="false">wookie</string>
 
     <!-- Strings for user preference -->
     <string name="pref_user_key" translatable="false">pref_user</string>
-    <string name="pref_user_title">GitHub user</string>
+    <string name="pref_user_title">Login</string>
 
         <!-- Strings for resource preference -->
         <string-array name="resources">
