--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="pref_user_key" translatable="false">pref_user</string>
     <string name="pref_user_title">Login</string>
 
+    <string name="reset_favorites">Reset Favorites</string>
+
         <!-- Strings for resource preference -->
         <string-array name="resources">
             <item>People</item>
