added sharing to detail page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,7 @@
     <string name="film_producer_format">%1$s</string>
     <string name="film_release_format">%1$s</string>
 
+    <string name="action_share">share</string>
+    <string name="share_chooser_title">Share a fact with your friends!</string>
+
 </resources>
